Added paragraph instructions

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         (<input type="number" placeholder="Monkey X" id="monkeyx">,
         <input type="number" placeholder="Monkey Y" id="monkeyy">)
     </p>
+    <p>Press restart for changes to take effect. Width of simulation is 8 meters, height is 6 meters, and ground is 1
+        meter.</p>
 </body>
 
 </html>
