bundled with webpack

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="shapes.js"></script>
-    <script src="trig.js"></script>
-    <script src="main.js"></script>
+    <script src="bundle.js"></script>
     <style>
         button,
         input,
@@ -21,9 +19,9 @@
 <body>
     <canvas id="myCanvas" width="800px" height="600px"></canvas>
     <br>
-    <button onclick="restart()">Restart</button>
-    <button onclick="pause()">Pause</button>
-    <button onclick="play()">Play</button>
+    <button id="restart">Restart</button>
+    <button id="pause">Pause</button>
+    <button id="play">Play</button>
     <br><br>
     <input type="number" placeholder="Velocity" id="velocity">
     <p>Monkey Position:
